# exqudens-cpp-cmake-fetch-strings

./: CMakeLists.txt
src/test/cpp/: tests_1.cpp
